# ktfmt-pre-commit-hook

./: .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml  setup.sh
.github/workflows/: ci.yml
src/ktfmtprecommithook/: __init__.py  __main__.py  ktfmtprecommithook.py
tests/: test_precommit.py  test_version.py
