[tool.poetry]
name = "ktfmt-pre-commit-hook"
version = "0.6.0"
description = "A pre-commit hook to run ktfmt."
license = "MIT OR Apache-2.0"
authors = ["David Hadley <davehadley@users.noreply.github.com>"]
packages = [ { include = "ktfmtprecommithook", from = "src" } ]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
filelock = "^3.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pre-commit = "^2.15.0"

[tool.poetry.scripts]
ktfmt-pre-commit-hook = "ktfmtprecommithook:_main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"